--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^0.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "express-handlebars": "^3.1.0",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.19.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.2"
   }
 }
