--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "client": "cd client && npm run start",
+    "server": "node index.js",
+    "dev": "run-p server client",
     "grab": "node lib/grabExchangeRate"
   },
   "keywords": [],
@@ -15,6 +16,7 @@
     "axios": "^0.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "npm-run-all": "^4.1.5",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.19.0"
