--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "client": "cd client && npm run start",
-    "server": "node index.js",
+    "server": "nodemon index.js",
     "dev": "run-p server client",
     "grab": "node lib/grabExchangeRate"
   },
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "npm-run-all": "^4.1.5",
